--- a/.gitignore
+++ b/.gitignore
@@ -421,3 +421,4 @@ FodyWeavers.xsd
 /devfornet.onnx/models/t5-small-onnx/t5-encoder-opset17.onnx
 /devfornet.onnx/models/t5-small-onnx/t5-encoder.onnx
 /devfornet.AppHost/Properties/launchSettings.json
+/exports
