--- a/devfornet.Web/.env.example
+++ b/devfornet.Web/.env.example
@@ -1,3 +1,4 @@
 ASPNETCORE_ENVIRONMENT=Development
 DOTNET_ENVIRONMENT=Development
 DEVFORNET_URI=https://localhost:7220
+API_BASE_URL=https://localhost:22275
