--- a/devfornet.rss/Dockerfile
+++ b/devfornet.rss/Dockerfile
@@ -10,6 +10,7 @@ COPY ["devfornet.db/devfornet.db.csproj", "devfornet.db/"]
 
 RUN dotnet restore "devfornet.rss/devfornet.rss.csproj"
 
+
 COPY . .
 WORKDIR "/src/devfornet.rss"
 RUN dotnet build "devfornet.rss.csproj" -c $BUILD_CONFIGURATION -o /app/build
@@ -19,6 +20,10 @@ RUN dotnet publish "devfornet.rss.csproj" -c $BUILD_CONFIGURATION -o /app/publis
 
 FROM mcr.microsoft.com/dotnet/runtime:10.0 AS runtime
 WORKDIR /app
+# Install runtime dependencies required by some NuGet packages (Kerberos/GSSAPI)
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends libgssapi-krb5-2 ca-certificates && \
+    rm -rf /var/lib/apt/lists/*
 COPY --from=publish /app/publish .
 
 ENTRYPOINT ["dotnet", "devfornet.rss.dll"]
