A few minor tweaks for deployment. Added a link for Umami analytics.

--- a/.gitignore
+++ b/.gitignore
@@ -422,3 +422,4 @@ FodyWeavers.xsd
 /devfornet.onnx/models/t5-small-onnx/t5-encoder.onnx
 /devfornet.AppHost/Properties/launchSettings.json
 /exports
+/devfornet.cms/Properties/launchSettings.json
